--- a/IT13B_CARANGCARANG/nbproject/project.properties
+++ b/IT13B_CARANGCARANG/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=IT13B_CARANGCARANG
-main.class=it13b_carangcarang.IT13B_CARANGCARANG
+main.class=midterm.Carangcarang_Single_Array
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
